--- a/Validation/validate_USAfacts_data/compare_usafacts_nyt_071320.Rmd
+++ b/Validation/validate_USAfacts_data/compare_usafacts_nyt_071320.Rmd
@@ -11,6 +11,22 @@ library(lubridate)
 library(pander)
 library(ggrepel)
 
+library(plotMPR) # internal Mathematica (MPR) package for ggplot theme
+
+# load fonts for theme_mpr for plots 
+#extrafont::font_import() 
+extrafont::loadfonts(device = "win",  quiet = TRUE)
+
+# format table names
+format_names <- function(dat){
+  n <- names(dat)
+  n <- gsub("_", " ", n)
+  n <- gsub("^(.)","\\U\\1", tolower(n), perl = TRUE)
+  
+  dat %>% set_names(n)
+}
+
+# load data
 dat_nyt <- read_csv("NYT_data_071420.csv") #%>% filter(!is.na(fips))
 
 dat_usafacts_cases <- read_csv("covid_confirmed_usafacts_071420.csv") %>%
@@ -48,7 +64,7 @@ The data for each of the two sources are gathered from state and local public he
 3) **Other differences:** See the blog post linked above for more information on the differences between the data sources.
 
 
-## 1) Comparison of total national cases and deaths over time (April 1st, 2020 onward) {.tabset}
+## 1) Comparison of total national cases and deaths over time {.tabset}
 ```{r}
 nyt_total <- dat_nyt %>% filter(state!="Puerto Rico") %>%
   group_by(date) %>% 
@@ -59,7 +75,7 @@ usafacts_total = full_join(usafacts_total_cases, usafacts_total_deaths, by="date
 ```
 
 ### Cases
-```{r, fig.height=8}
+```{r, fig.height=8, fig.width=10}
 bind_rows(nyt_total, usafacts_total) %>% select(-deaths) %>% spread(source, cases) %>% 
   filter(date>=date("2020-04-01")) %>%
   mutate(difference = NYT-USAFacts,
@@ -72,15 +88,20 @@ bind_rows(nyt_total, usafacts_total) %>% select(-deaths) %>% spread(source, case
                          source=="USAFacts"~"USAFacts",
                          T~"Comparison"),
          color=fct_rev(color)) %>%
-  ggplot(aes(x=date, y=cases, color=color)) + geom_line() + geom_hline(yintercept=0, linetype="dotted") +
+  ggplot(aes(x=date, y=cases, color=color)) + geom_line() + 
+  geom_hline(yintercept=0, linetype="dotted") +
   facet_grid(panel~., scale="free_y") +
   labs(color="") + ylab("") +
-  theme_bw() +
-  ggtitle("Comparison of national cases reported by each source")
+  
+  ggtitle("Comparison of national cases reported by each source",
+          "April 1st, 2020 onward") +
+  theme_mpr() + 
+  scale_color_mpr(type = "qual", discrete = TRUE) +
+  scale_fill_mpr(type = "qual", discrete = TRUE)
 ```
 
 ### Deaths
-```{r, fig.height=8}
+```{r, fig.height=8, fig.width=10}
 bind_rows(nyt_total, usafacts_total) %>% select(-cases) %>% spread(source, deaths) %>% 
   filter(date>=date("2020-04-01")) %>%
   mutate(difference = NYT-USAFacts,
@@ -96,8 +117,11 @@ bind_rows(nyt_total, usafacts_total) %>% select(-cases) %>% spread(source, death
   ggplot(aes(x=date, y=deaths, color=color)) + geom_line() + geom_hline(yintercept=0, linetype="dotted") +
   facet_grid(panel~., scale="free_y") + 
   labs(color="") + ylab("") +
-  theme_bw()  +
-  ggtitle("Comparison of national deaths reported by each source")
+  ggtitle("Comparison of national deaths reported by each source",
+          "April 1st, 2020 onward") +
+  theme_mpr() + 
+  scale_color_mpr(type = "qual", discrete = TRUE) +
+  scale_fill_mpr(type = "qual", discrete = TRUE)
 ```
 
 ## 2) Comparison of unallocated cases
@@ -123,20 +147,23 @@ usafacts_unknown <- bind_rows(usafacts_unknown_cases, usafacts_unknown_deaths) %
 ### Unallocated cases and deaths by state 
 This plot shows only states where there are unallocated cases or deaths in either data source.
 
-```{r}
+```{r, fig.height=8, fig.width=10}
 bind_rows(nyt_unknown, usafacts_unknown) %>% filter(cases>0) %>%
   arrange(desc(cases)) %>% 
   mutate(state = fct_rev(fct_relevel(as.factor(state), unique(.$state)))) %>%
   spread(source, cases) %>% mutate_at(c("USAFacts","NYT"), ~ifelse(is.na(.),0,.)) %>%
   gather("source","cases",c("USAFacts","NYT")) %>%
-  gather("var","val", c("cases","deaths")) %>% 
+  rename(Cases=cases, Deaths=deaths) %>%
+  gather("var","val", c("Cases","Deaths")) %>% 
   
   ggplot(aes(x=state, y=val, fill=source)) +
   geom_col(position = position_dodge()) + 
   coord_flip() + facet_grid(.~var) +
 
-  xlab("State") + ylab("Number unallocated") +
-  theme_bw()
+  xlab("State") + ylab("Number of unallocated cases") + labs(fill="") +
+  theme_mpr() + 
+  scale_color_mpr(type = "qual", discrete = TRUE) +
+  scale_fill_mpr(type = "qual", discrete = TRUE)
 ```
 
 ### Deaths categorized as New York City unallocated in USAFacts
@@ -148,7 +175,8 @@ nyc_cases <- dat_usafacts_cases %>% filter(fips=="00001", date==max(date)) %>%
 nyc_deaths <- dat_usafacts_deaths %>% filter(fips=="00001", date==max(date)) %>%
   select(county, state, deaths)
 
-inner_join(nyc_cases,nyc_deaths, by = c("county","state")) %>% pandoc.table()
+inner_join(nyc_cases,nyc_deaths, by = c("county","state")) %>% 
+  format_names() %>% pandoc.table()
 ```
 
 ```{r}
@@ -173,16 +201,16 @@ All county FIPS codes from the New York Times data are in the USAFacts data with
 ```{r, results="asis"}
 dat_nyt %>% anti_join(dat_usafacts_cases, by="fips") %>% count(state, fips) %>% count(state) %>% 
   set_names(c("State","# Counties in NYT but missing from USAFacts")) %>% 
-  pandoc.table()
+  format_names() %>% pandoc.table()
 ```
 
 There are a few FIPs codes that appear in the USAFacts data but not in the NYT:
 
 - The Grand Princess cruise ship is included in USAFacts but not in NYT
 
-- USA Facts has a row for Russell county, KS whereas NYT has a single row for Kansas City
+- USAFacts has a row for Russell county, KS whereas NYT has a single row for Kansas City
 
-- USA Facts has rows for each of five counties in New York City, whereas NYT has a single row for New York City
+- USAFacts has rows for each of five counties in New York City, whereas NYT has a single row for New York City
 
 - USA facts has a row for Martinsville City, while NYT does not
 
@@ -191,8 +219,8 @@ There are a few FIPs codes that appear in the USAFacts data but not in the NYT:
 dat_usafacts_cases %>% anti_join(dat_nyt, by="fips") %>% filter(cases!=0) %>%
   group_by(state, county, fips) %>% 
   summarise(cummulative_cases = max(cases), earliest_date = min(date), 
-            latest_date = max(date)) %>%
-  pandoc.table(split.table=Inf)
+            latest_date = max(date)) %>% 
+  format_names() %>% pandoc.table(split.table=Inf)
 ```
 
 ## 4) Comparison of cumulative cases for all counties that appear in both data sets
@@ -205,12 +233,15 @@ bind_rows(dat_nyt %>% select(date, fips, cases) %>% mutate(source="NYT"),
   mutate_at(c("NYT","USAFacts"), ~ifelse(is.na(.), 0, .)) %>% 
   ggplot(aes(x=NYT, y=USAFacts)) + geom_point(size=.5) +
   
-  theme_bw() + ggtitle("Comparison of cases reported in NYT and in USAFacts", 
-                       "For counties included in both sources")
+  ggtitle("Comparison of cases reported in NYT and in USAFacts", 
+                       "For counties included in both sources")+
+  xlab("Cases reported in NYT") + ylab("Cases reported in USAFacts") +
+  theme_mpr() + 
+  scale_color_mpr(type = "qual", discrete = TRUE) +
+  scale_fill_mpr(type = "qual", discrete = TRUE)
 ```
 
-### Counties where the case count in USA Facts differs from the case count in NYT by more than 5% {.tabset}
-The following table is arranged in descending order of the absolute value of the difference between the two sources.
+### Counties where the case count in USAFacts differs from the case count in NYT by more than 5% {.tabset}
 
 ```{r}
 case_diff_tab <- bind_rows(dat_nyt %>% select(date, fips, cases) %>% mutate(source="NYT"),
@@ -237,16 +268,20 @@ case_diff_tab %>%
   geom_text_repel(data = . %>% filter(rank(-1*abs_diff)<=5), 
                    aes(label=county), size=2, direction="x") +
   xlim(0,27800) + ylim(0,27800) + coord_equal() +
-  theme_bw() 
+    xlab("Cases reported in NYT") + ylab("Cases reported in USAFacts") +
+  theme_mpr() + 
+  scale_color_mpr(type = "qual", discrete = TRUE) +
+  scale_fill_mpr(type = "qual", discrete = TRUE)
 ```
 
 #### Table
+The following table is arranged in descending order of the absolute value of the difference between the two sources.
 ```{r, results="asis"}
 case_diff_tab %>% 
   arrange(desc(abs(NYT-USAFacts))) %>%
   rename(county_USAFacts=county) %>%
-  mutate(percent_error = paste0(round(100*percent_error,0),"%")) %>%
-  pandoc.table(split.table=Inf)
+  mutate(percent_error = paste0(round(100*percent_error,0),"%")) %>% 
+  format_names() %>% pandoc.table(split.table=Inf)
 ```
 
 ## 5) Comparison of cumulative deaths for all counties that appear in both data sets
@@ -259,13 +294,15 @@ bind_rows(dat_nyt %>% select(date, fips, deaths) %>% mutate(source="NYT"),
   mutate_at(c("NYT","USAFacts"), ~ifelse(is.na(.), 0, .)) %>% 
   ggplot(aes(x=NYT, y=USAFacts)) + geom_point(size=.5) +
   
-  theme_bw() +
   ggtitle("Comparison of deaths reported in NYT and in USAFacts", 
-                       "For counties included in both sources")
+                       "For counties included in both sources") +
+  xlab("Deaths reported in NYT") + ylab("Deaths reported in USAFacts") +
+  theme_mpr() + 
+  scale_color_mpr(type = "qual", discrete = TRUE) +
+  scale_fill_mpr(type = "qual", discrete = TRUE)
 ```
 
-### Counties where the death count in USA Facts differs from the death count in NYT by more than 5% {.tabset}
-The following table is arranged in descending order of the absolute value of the difference between the two sources.
+### Counties where the death count in USAFacts differs from the death count in NYT by more than 5% {.tabset}
 
 ```{r}
 death_diff_tab <- bind_rows(dat_nyt %>% select(date, fips, deaths) %>% mutate(source="NYT"),
@@ -292,16 +329,21 @@ death_diff_tab %>%
   geom_text_repel(data = . %>% filter(rank(-1*abs_diff)<=5), 
                    aes(label=county), size=2, direction="x") +
   xlim(0,2750) + ylim(0,2750) + coord_equal() +
-  theme_bw() 
+  xlab("Deaths reported in NYT") + ylab("Deaths reported in USAFacts") +
+  theme_mpr() + 
+  scale_color_mpr(type = "qual", discrete = TRUE) +
+  scale_fill_mpr(type = "qual", discrete = TRUE)
 ```
 
 #### Table
+The following table is arranged in descending order of the absolute value of the difference between the two sources.
+
 ```{r, results="asis"}
 death_diff_tab %>% 
   arrange(desc(abs(NYT-USAFacts))) %>%
   rename(county_USAFacts=county) %>%
-  mutate(percent_error = paste0(round(100*percent_error,0),"%")) %>%
-  pandoc.table(split.table=Inf)
+  mutate(percent_error = paste0(round(100*percent_error,0),"%")) %>% 
+  format_names() %>% pandoc.table(split.table=Inf)
 ```
 
 
