FIX: small fix to formula for calculating posterior CFR. With beta(a,b) prior, posterior is beta(a+deaths, b+cases-deaths) which has mean (a+deaths)/(a+b+cases) [https://en.wikipedia.org/wiki/Conjugate_prior]

--- a/data/create_state_CFR_priors/create_and_validate_priors.Rmd
+++ b/data/create_state_CFR_priors/create_and_validate_priors.Rmd
@@ -238,7 +238,7 @@ state_fitted_dists %>%
 ### Compare adjusted CFR from model to adjusted CFR computed using empirical Bayes with the state-specific beta prior
 ```{r}
 adjust_CFR_EB <- function(deaths, cases, shape1, shape2, ...){
-  (deaths + shape1)/(cases+shape2)
+  (deaths + shape1)/(cases+shape1+shape2)
 }
 
 dat <- dat %>% left_join(state_fitted_dists %>% dplyr::select(state, shape1, shape2), by="state") %>%
