--- a/data/create_state_CFR_priors/create_and_validate_priors.Rmd
+++ b/data/create_state_CFR_priors/create_and_validate_priors.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Create and validate priors for de-noising of county-level CFR"
-date: "8/25/2020"
+date: "10/04/2020"
 output: html_document
 ---
 
@@ -12,7 +12,7 @@ library(brms)
 library(pander)
 library(plotly)
 
-dat <- readRDS("usafacts_082420.RDS") %>% 
+dat <- readRDS("usafacts_100320.RDS") %>% 
   gather(var,count,c("cases","deaths")) %>%
   filter(var=="deaths" & date == max(date) | var=="cases" & date == max(date)-13) %>%
   select(-date) %>% spread(var, count) %>%
@@ -72,20 +72,20 @@ We could in theory obtain more precise estimates by placing a more informative p
 ### Model with intercept and state and county random effect
 
 ```{r}
-#  stopifnot(length(unique(dat$fips))==nrow(dat))
-#  my_priors1 <- prior(normal(0,1.6), class=Intercept) + prior(normal(0,1), class="sd")
-#  
-#  fit1 <- brm(deaths | trials(cases) ~ (1|state) + (1|fips),  
-#                          data = dat, 
-#                          family = binomial(link = "logit"),
-#      prior = my_priors1,
-#      iter=2000,
-#      chains=4, cores=2,
-#      seed=090120) 
-#  
-# fit1 %>% saveRDS(file.path("fit1.RDS"))
+# stopifnot(length(unique(dat$fips))==nrow(dat))
+# my_priors1 <- prior(normal(0,1.6), class=Intercept) + prior(normal(0,1), class="sd")
+# 
+# fit1 <- brm(deaths | trials(cases) ~ (1|state) + (1|fips),  
+#                         data = dat, 
+#                         family = binomial(link = "logit"),
+#     prior = my_priors1,
+#     iter=2000,
+#     chains=4, cores=2,
+#     seed=090120) 
+# 
+# fit1 %>% saveRDS(file.path("brms_fits","fit1.RDS"))
 
-fit1 <- readRDS(file.path("fit1.RDS"))
+fit1 <- readRDS(file.path("brms_fits","fit1.RDS"))
 ```
 
 ```{r}
@@ -305,8 +305,8 @@ dat %>% mutate(UR_unadjusted = CFR/true_CFR,
 
 ## Write out state priors for use in 19 and Me
 ```{r}
-#state_fitted_dists %>% dplyr::select(state, shape1, shape2) %>%
-#  write_csv("state_CFR_priors.csv")
+state_fitted_dists %>% dplyr::select(state, shape1, shape2) %>%
+  write_csv("state_CFR_priors_100320.csv")
 ```
 
 
