--- a/underreporting-over-time/plots_for_paper.Rmd
+++ b/underreporting-over-time/plots_for_paper.Rmd
@@ -53,26 +53,34 @@ p1 <- d_plot %>%
              aes(x=date-15, y=lab_pos, label=state), 
              show.legend=F, direction="y", size=2) +
   
-  geom_hline(yintercept = 0.0138, color="red", linetype="dotted") +
-  geom_hline(yintercept = 0.006, color="blue", linetype="dotted") +
+  geom_segment(y = 0.0138, yend = 0.0138, 
+               x = min(d_plot$date), xend = ymd("2020-11-01"),
+               color="red", linetype="dotted") +
+  geom_segment(y = 0.006, yend = 0.006, 
+               xend = max(d_plot$date), x = ymd("2020-10-01"),
+               color="blue", linetype="dotted") +
   geom_text(label = "Russell et al. IFR estimate: 1.38%",
-            data = lab_pos[1,], aes(x = date-15),  y = 0.0138, color = "red",
-            hjust=0.1, vjust = 1.5, size=2) +
+            data = lab_pos[1,], aes(x = date),  y = 0.0138, color = "red",
+            hjust=0, vjust = 1.5, size=2) +
   geom_text(label = "Updated (IHME) IFR estimate: 0.6%",
-            data = lab_pos[1,], aes(x = date-15),  y = 0.006, color = "blue",
-            hjust=0.1, vjust = 1.5, size=2) +
+            data = lab_pos[1,], aes(x = max(d_plot$date)),  y = 0.006, color = "blue",
+            hjust=1, vjust = 1.5, size=2) +
   
   scale_x_date("",date_breaks = "1 month", date_labels =  "%b %Y") +
   scale_y_continuous("90-day case fatality rate",
                      lim = c(0,.1), labels=scales::percent) +
-  scale_color_manual("State", values = c("black", ggplot_cols)) +
-  scale_linetype_manual("State", values = c("dashed", rep("solid", 5))) +
+  scale_color_manual("", values = c("black", ggplot_cols)) +
+  scale_linetype_manual("", values = c("dashed", rep("solid", 5))) +
   theme_bw() +
   theme(axis.text.x=element_text(angle=45, hjust=1),
-        plot.title = element_text(size=12)) +
+        plot.title = element_text(size=12),
+        legend.position = "bottom",
+        legend.margin=margin(t=-20)) +
+  guides(color=guide_legend(ncol=6)) +
   ggtitle("A) Case fatality rate over time")
 
 ggsave("CFR_over_time.jpeg", height = 3, width = 6)
+p1
 ```
 
 ## UR by state on Feb 18, 2021
@@ -84,7 +92,7 @@ bind_rows(d_plot_state, d_plot_nat) %>%
 ```
 
 ## Reported versus adjusted cases
-```{r}
+```{r, fig.width=6, fig.height=3.5}
 d_plot <- dat %>% 
   group_by(date) %>% 
   summarise(cases=sum(cases), deaths=sum(deaths)) %>%
@@ -98,11 +106,12 @@ d_plot <- dat %>%
          deaths_2week = deaths - lag(deaths, 14)) %>%
   gather(var, val, contains("cases_2week")) %>%
   na.omit() %>%
-  filter(var!="cases_2week_adj2" | date>=ymd("2020-06-15"))
+  filter(var!="cases_2week_adj2" | date>=ymd("2020-10-01"),
+         var!="cases_2week_adj1" | date<=ymd("2020-11-01"))
 
 var_labels <- c("Reported cases",
-                "Adjusted cases: IFR = 1.38%",
-                "Adjusted cases: IFR = 0.6%")
+                "Under-reporting adjusted cases: IFR = 1.38%",
+                "Under-reporting adjusted cases: IFR = 0.6%")
 
 p2 <- filter(d_plot, date>=ymd("2020-03-15")) %>%
   ggplot(aes(x=date, y=val, color=var, linetype=var)) +
@@ -118,17 +127,20 @@ p2 <- filter(d_plot, date>=ymd("2020-03-15")) %>%
   #guides(color = guide_legend(ncol=1)) + 
   theme_bw() +
   theme(axis.text.x=element_text(angle=45, hjust=1), 
-        legend.position = "right",
-        plot.title = element_text(size=12)) +
-  ggtitle("B) 14-day average national case count with and without adjustment")
+        legend.position = "bottom",
+        plot.title = element_text(size=12),
+        legend.margin=margin(t=-20, l=-50)) +
+  guides(color=guide_legend(ncol=2)) +
+  ggtitle("B) 14-day average national case count")
 
 ggsave("cases_unadj_adj.jpeg", height = 3, width = 6)
+p2
 ```
 
 ## Combine plots
-```{r, out.height=6,out.width=6}
-plot_grid(p1,p2,ncol=1, rel_heights = c(3,2))
-ggsave("combinned_plot.jpeg", height = 5, width = 6)
+```{r, fig.height=7,fig.width=6}
+plot_grid(p1,p2,ncol=1, rel_heights = c(3,3))
+ggsave("combinned_plot.jpeg", height = 6, width = 6)
 ```
 
 
